--- a/atestace.qmd
+++ b/atestace.qmd
@@ -4,7 +4,7 @@ title: "Podmínky atestace"
 
 Pro úspěšné splnění předmětu je nutné splnit následující úkol:
 
-V červnu roku 2019 provedlo [Centrum pro výzkum veřejného mínění](https://sociology-fa-cu.github.io/uvod-do-r/cvvm.soc.cas.cz/) průzkum zaměřený na to, jak veřejnost hodnotí závažnost vybraných celospolečenských hrozeb a připravenost České republiky na ně. Respondenti byly dotazováni na zhruba 26 hrozeb a pro každou z nich určili, jak je podle nich závažná a jak dobře jsme na ni připravení. Celá zpráva s názvem *Celospolečenské hrozby podle veřejnosti* je k nalezení [zde](https://cvvm.soc.cas.cz/media/com_form2content/documents/c2/a5077/f9/po191223.pdf)
+V červnu roku 2019 provedlo [Centrum pro výzkum veřejného mínění](https://sociology-fa-cu.github.io/uvod-do-r/cvvm.soc.cas.cz/) průzkum zaměřený na to, jak veřejnost hodnotí závažnost vybraných celospolečenských hrozeb a připravenost České republiky na ně. Respondenti byly dotazováni na zhruba 26 hrozeb a pro každou z nich určili, jak je podle nich závažná a jak dobře jsme na ni připravení. Celá zpráva s názvem *Celospolečenské hrozby podle veřejnosti* je k nalezení [zde](https://cvvm.soc.cas.cz/media/com_form2content/documents/c2/a5077/f9/po191223.pdf).
 
 Pro získání zápočtu splňte **jedno** z následujících:
 
@@ -14,12 +14,12 @@ Pro získání zápočtu splňte **jedno** z následujících:
 
 V obou případech odevzdejte skript, který musí být plně funkční, tedy musí proběhnout bez chyby od začátku do konce bez vnějších zásahů.
 
-Data pro vypracování úkolu jsou k nalezení buď v [Českém sociálněvědním datovém archivu](https://archiv.soc.cas.cz/), nebo ke stažení rovnou [zde](https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/cvvm_cerven_2019.rds).
+Data pro vypracování úkolu jsou k nalezení buď v [Českém sociálněvědním datovém archivu](https://archiv.soc.cas.cz/), nebo ke stažení rovnou [zde](https://github.com/Sociology-FA-CU/uvod-do-r/raw/master/data/cvvm_cerven_2019.rds).
 
 Případně stáhnout rovnou v R pomocí funkce:
 
 ``` r
-cvvm = read.csv("https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/cvvm_cerven_2019.csv")
+cvvm = read.csv("https://github.com/Sociology-FA-CU/uvod-do-r/raw/master/data/cvvm_cerven_2019.csv")
 ```
 
-Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém archivu, případně [zde](https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/documentation/V1906.pdf).
+Dotazník s popisem otázek je možné stejně jako data stáhout v Datovém archivu, případně [zde](https://github.com/Sociology-FA-CU/uvod-do-r/raw/master/atestation/V1906.pdf).
