--- a/data.qmd
+++ b/data.qmd
@@ -6,14 +6,14 @@ V kurzu jsou primárně využívaná data o Evropských zemích, získáná z Eu
 
 Dataset je možné stáhnout v několika formátech:
 
--   **Comma separated values formát** je ke stažení [zde](https://raw.githubusercontent.com/alesvomacka/Uvod_do_analyzy_dat_v_R/master/data/countries.csv) (klikněte pravým tlačítkem a zvolte *Uložit odkaz jako...*/*Save link as...*).
+-   **Comma separated values formát** je ke stažení [zde](https://github.com/Sociology-FA-CU/uvod-do-r/raw/master/data/cvvm_cerven_2019.csv) (klikněte pravým tlačítkem a zvolte *Uložit odkaz jako...*/*Save link as...*).
 
--   **RDS formát** [zde](https://github.com/alesvomacka/Uvod_do_analyzy_dat_v_R/raw/master/data/countries.rds).
+-   **RDS formát** [zde](https://github.com/Sociology-FA-CU/uvod-do-r/raw/master/data/countries.rds).
 
 Data obsahují následující proměnné:
 
 | Jméno proměnné  | Popis                                                             | Zdroj                 |
-|-----------------|-------------------------------------------------------------------|-----------------------|
+|----------------|-----------------------------------------|----------------|
 | country         | Jméno země                                                        |                       |
 | code            | Dvoumístný ISO kód země                                           |                       |
 | gdp             | HDP země v milionech euro (2018)                                  | Eurostat              |
